# padicBGV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  encoder.cpp  encoder.hpp  global.hpp  test.cpp
